--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>american</title>
+	<title>Samarth-Coordinator | NIIT Foundation</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<!-- <link rel="stylesheet" type="text/css" href="webcomponents/skillcard/css/skillcard.css"> -->
 	<link rel="stylesheet" type="text/css" href="Samarth-WebComponents/skillcard/css/skillcard.css">
 	<link rel="stylesheet" type="text/css" href="angular-material/angular-material.css">
 	<link rel="stylesheet" type="text/css" href="google-material-icons/">	
 	<link rel="stylesheet" href="google-material-icons/dist/material-icons-font.css">
-
 </head>
 <body ng-app="samarth-coordinator">
 
@@ -31,7 +29,7 @@
 
 	<script type="text/javascript" src="samarth-webcomponents/samarth-webcomponents.js"></script>
 	<script type="text/javascript" src="samarth-webcomponents/skillcard/skillcard.js"></script>
-	<script type="text/javascript" src="candidatesearch/controller/candidateSearchCtrl.js"></script>
+	<script type="text/javascript" src="candidatesearch/controller/candidatesearchctrl.js"></script>
 	<script type="text/javascript" src="candidatesearch/candidatesearch.js"></script>
 
 </body>
