--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Samarth-Coordinator | NIIT Foundation</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="Samarth-WebComponents/skillcard/css/skillcard.css">
+	<link rel="stylesheet" type="text/css" href="samarth-webComponents/skillcard/css/skillcard.css">
 	<link rel="stylesheet" type="text/css" href="angular-material/angular-material.css">
 	<link rel="stylesheet" type="text/css" href="google-material-icons/">	
 	<link rel="stylesheet" href="google-material-icons/dist/material-icons-font.css">
@@ -16,7 +16,10 @@
 
 	<md-content>
 		<md-button class="md-raised md-primary" ui-sref="candidatessearch">Search candidate</md-button>
+		<md-button class="md-raised md-primary" ui-sref="registercandidate">Register candidate</md-button>
+
 		<div ui-view="main" layout="column"></div>
+		<div ui-view="registercandidate"></div>
 	</md-content>
 	<!-- Vendor Scripts -->
 	<script type="text/javascript" src="angular/angular.js"></script>
@@ -24,13 +27,20 @@
 	<script type="text/javascript" src="angular-animate/angular-animate.js"></script>
 	<script type="text/javascript" src="angular-aria/angular-aria.js"></script>
 	<script type="text/javascript" src="angular-ui-router/release/angular-ui-router.js"></script>
+	<script type="text/javascript" src="angular-messages/angular-messages.js"></script>
+
+
 	<!-- Samarth-Coordinator Scripts -->
+	
 	<script type="text/javascript" src="samarthcoordinator.js"></script>
+	<script type="text/javascript" src="candidatesearch/controller/candidatesearchctrl.js"></script>
+	<script type="text/javascript" src="candidatesearch/candidatesearch.js"></script>
+	<script type="text/javascript" src="candidatesearch/services/candidatesearchservice.js"></script>
+	<script type="text/javascript" src="candidatesearch/controller/candidateregistration.js"></script>
+
 
 	<script type="text/javascript" src="samarth-webcomponents/samarth-webcomponents.js"></script>
 	<script type="text/javascript" src="samarth-webcomponents/skillcard/skillcard.js"></script>
-	<script type="text/javascript" src="candidatesearch/controller/candidatesearchctrl.js"></script>
-	<script type="text/javascript" src="candidatesearch/candidatesearch.js"></script>
 
 </body>
 </html>
