--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" type="text/css" href="samarth-webComponents/skillcard/css/skillcard.css">
     <link rel="stylesheet" type="text/css" href="angular-material/angular-material.css">
-    <!-- <link rel="stylesheet" type="text/css" href="google-material-icons/">
- -->
     <link rel="stylesheet" href="google-material-icons/dist/material-icons-font.css">
     <link rel="stylesheet" href="home/css/style.css">
+    <link rel="stylesheet" href="samarth-webcomponents/rubric/css/style.css">
 </head>
 
 <body ng-app="samarth-coordinator" ng-controller="Maincontroller" ng-cloak>
@@ -26,10 +25,9 @@
     <script src="angular-messages/angular-messages.min.js"></script>
     <!-- Samarth-Coordinator Scripts -->
     <script type="text/javascript" src="samarthcoordinator.js"></script>
-    <script type="text/javascript" src="samarth-webcomponents/samarth-webcomponents.js"></script>
-    <script type="text/javascript" src="samarth-webcomponents/skillcard/skillcard.js"></script>
     <script type="text/javascript" src="candidatesearch/controller/candidatesearchctrl.js"></script>
     <script type="text/javascript" src="candidatesearch/candidatesearch.js"></script>
+    <script type="text/javascript" src="candidatesearch/services/candidatesearchservice.js"></script>
     <!-- <script src="script.js"></script> -->
     <script src="home/homeroute.js"></script>
     <script src="home/controllers/navbarController.js"></script>
@@ -40,6 +38,10 @@
     <script src="home/controllers/mainController.js"></script>
     <script src="home/services/signinService.js"></script>
     <!-- <script src="authentication/services/userInterceptor.js"></script> -->
+    <!--Samarth-Webcomponents Scripts-->
+    <script type="text/javascript" src="samarth-webcomponents/samarth-webcomponents.js"></script>
+    <script type="text/javascript" src="samarth-webcomponents/skillcard/skillcard.js"></script>
+    <script type="text/javascript" src="samarth-webcomponents/rubric/rubriccomponent.js"></script>
 </body>
 
 </html>
