--- a/webapp/index.html
+++ b/webapp/index.html
@@ -24,20 +24,24 @@
     <script type="text/javascript" src="angular-ui-router/release/angular-ui-router.js"></script>
     <script src="angular-messages/angular-messages.min.js"></script>
     <!-- Samarth-Coordinator Scripts -->
+    <!--candidatesearch module-->
     <script type="text/javascript" src="samarthcoordinator.js"></script>
-    <script type="text/javascript" src="candidatesearch/controller/candidatesearchctrl.js"></script>
     <script type="text/javascript" src="candidatesearch/candidatesearch.js"></script>
+    <script type="text/javascript" src="candidatesearch/controller/candidatesearchctrl.js"></script>
+    <script type="text/javascript" src="candidatesearch/controller/candidateregistration.js"></script>
     <script type="text/javascript" src="candidatesearch/services/candidatesearchservice.js"></script>
-    <!-- <script src="script.js"></script> -->
+    <script type="text/javascript" src="candidatesearch/services/registrationservice.js"></script>
+    <!--home module-->
     <script src="home/homeroute.js"></script>
     <script src="home/controllers/navbarController.js"></script>
     <script src="home/controllers/loginController.js"></script>
-    <script src="authentication/services/signinFactory.js"></script>
-    <script src="authentication/authroute.js"></script>
-    <script src="authentication/controllers/signoutController.js"></script>
     <script src="home/controllers/mainController.js"></script>
     <script src="home/services/signinService.js"></script>
-    <!-- <script src="authentication/services/userInterceptor.js"></script> -->
+    <!--authentication module-->
+    <script src="authentication/authroute.js"></script>
+    <script src="authentication/services/signinFactory.js"></script>
+    <script src="authentication/services/userInterceptor.js"></script>
+    <script src="authentication/controllers/signoutController.js"></script>
     <!--Samarth-Webcomponents Scripts-->
     <script type="text/javascript" src="samarth-webcomponents/samarth-webcomponents.js"></script>
     <script type="text/javascript" src="samarth-webcomponents/skillcard/skillcard.js"></script>
