--- a/webapp/index.html
+++ b/webapp/index.html
@@ -40,7 +40,7 @@
     <!--authentication module-->
     <script src="authentication/authroute.js"></script>
     <script src="authentication/services/signinFactory.js"></script>
-    <script src="authentication/services/userInterceptor.js"></script>
+    <!-- <script src="authentication/services/userInterceptor.js"></script> -->
     <script src="authentication/controllers/signoutController.js"></script>
     <!--Samarth-Webcomponents Scripts-->
     <script type="text/javascript" src="samarth-webcomponents/samarth-webcomponents.js"></script>
