--- a/webapp/index.html
+++ b/webapp/index.html
@@ -27,22 +27,17 @@
     <!--candidatesearch module-->
     <script type="text/javascript" src="samarthcoordinator.js"></script>
     <script type="text/javascript" src="candidatesearch/candidatesearch.js"></script>
-<<<<<<< HEAD
-    <script type="text/javascript" src="candidateregistration/candidateregistration.js"></script>
-
     <script type="text/javascript" src="candidatesearch/controller/candidatesearchctrl.js"></script>
-    <script type="text/javascript" src="candidateregistration/controller/candidateregistrationctrl.js"></script>
     <script type="text/javascript" src="candidatesearch/services/candidatesearchservice.js"></script>
+    
+    <!-- candidate registration -->
+    <script type="text/javascript" src="candidateregistration/candidateregistration.js"></script>
+    <script type="text/javascript" src="candidateregistration/controller/candidateregistrationctrl.js"></script>
     <script type="text/javascript" src="candidateregistration/services/registrationservice.js"></script>
 
     <!-- <script src="script.js"></script> -->
-=======
-    <script type="text/javascript" src="candidatesearch/controller/candidatesearchctrl.js"></script>
-    <script type="text/javascript" src="candidatesearch/controller/candidateregistration.js"></script>
-    <script type="text/javascript" src="candidatesearch/services/candidatesearchservice.js"></script>
-    <script type="text/javascript" src="candidatesearch/services/registrationservice.js"></script>
-    <!--home module-->
->>>>>>> 83868fca0618ec7a2c1a0016a46f8b64d3cf0cb4
+
+
     <script src="home/homeroute.js"></script>
     <script src="home/controllers/navbarController.js"></script>
     <script src="home/controllers/loginController.js"></script>
