--- a/webapp/index.html
+++ b/webapp/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="google-material-icons/dist/material-icons-font.css">
     <link rel="stylesheet" href="home/css/style.css">
     <link rel="stylesheet" href="samarth-webcomponents/rubric/css/style.css">
-
     <link rel="stylesheet" href="samarth-webcomponents/sectionprojectcard/css/sectionprojectcard.css">
     <link rel="stylesheet" href="samarth-webcomponents/sectionseducationcard/css/sectionseducationcard.css">
     <link rel="stylesheet" href="samarth-webcomponents/sectionskillcard/css/sectionskillcard.css">
@@ -49,37 +48,26 @@
     <script type="text/javascript" src="candidateregistration/candidateregistration.js"></script>
     <script type="text/javascript" src="candidateregistration/controller/candidateregistrationctrl.js"></script>
     <script type="text/javascript" src="candidateregistration/services/registrationservice.js"></script>
-
     <!--complete profile-->
     <script type="text/javascript" src="completeprofile/controller/completeprofileCtrl.js"></script>
     <script type="text/javascript" src="completeprofile/completeprofile.js"></script>
-    
-
     <!-- <script src="script.js"></script> -->
     <!--Samarth-Webcomponents Scripts-->
     <script type="text/javascript" src="samarth-webcomponents/samarth-webcomponents.js"></script>
     <script type="text/javascript" src="samarth-webcomponents/skillcard/skillcard.js"></script>
     <script type="text/javascript" src="samarth-webcomponents/skillcard/services/skillcardservice.js"></script>
     <script type="text/javascript" src="samarth-webcomponents/rubric/rubriccomponent.js"></script>
-
-
-
+    <script type="text/javascript" src="samarth-webcomponents/rubric/services/rubricservice.js"></script>
     <script type="text/javascript" src="samarth-webcomponents/sectionpersonalinfocard/sectionpersonalinfocard.js"></script>
     <script type="text/javascript" src="samarth-webcomponents/sectionpersonalinfocard/services/sectionpersonalinfoservice.js"></script>
-
     <script type="text/javascript" src="samarth-webcomponents/sectionseducationcard/sectionseducationcard.js"></script>
     <script type="text/javascript" src="samarth-webcomponents/sectionseducationcard/services/sectioneducationservice.js"></script>
-
     <script type="text/javascript" src="samarth-webcomponents/sectionskillcard/sectionskillcard.js"></script>
     <script type="text/javascript" src="samarth-webcomponents/sectionskillcard/services/sectionskillservices.js"></script>
-
     <script type="text/javascript" src="samarth-webcomponents/sectionprojectcard/sectionprojectcard.js"></script>
     <script type="text/javascript" src="samarth-webcomponents/sectionprojectcard/services/sectionprojectservice.js"></script>
-
     <script type="text/javascript" src="samarth-webcomponents/sectionworkexperiencecard/sectionworkexperiencecard.js"></script>
     <script type="text/javascript" src="samarth-webcomponents/sectionworkexperiencecard/service/sectionworkexperience.js"></script>
-
-
     <!-- Home module should come almost towards end, as it might be dependent on many other modules -->
     <script src="home/homeroute.js"></script>
     <script src="home/controllers/indexctrl.js"></script>
