--- a/webapp/index.html
+++ b/webapp/index.html
@@ -40,6 +40,7 @@
     <!-- Coordinator module -->
     <script src="coordinator/coordinateroute.js"></script>
     <script src="coordinator/controllers/crdtrdashboardctrl.js"></script>
+    <script src="coordinator/services/sidenavfactory.js"></script>
     <!--candidatesearch module-->
     <script type="text/javascript" src="candidatesearch/candidatesearch.js"></script>
     <script type="text/javascript" src="candidatesearch/controller/candidatesearchctrl.js"></script>
