change in complete profile

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -50,6 +50,7 @@
     <script type="text/javascript" src="candidateregistration/controller/candidateregistrationctrl.js"></script>
     <script type="text/javascript" src="candidateregistration/services/registrationservice.js"></script>
     <!--complete profile-->
+    <script type="text/javascript" src="completeprofile/services/candidateprofileservice.js"></script>
     <script type="text/javascript" src="completeprofile/controller/completeprofileCtrl.js"></script>
     <script type="text/javascript" src="completeprofile/completeprofile.js"></script>
     <!-- <script src="script.js"></script> -->
