--- a/webapp/index.html
+++ b/webapp/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="google-material-icons/dist/material-icons-font.css">
     <link rel="stylesheet" href="home/css/style.css">
     <link rel="stylesheet" href="samarth-webcomponents/rubric/css/style.css">
+    <!-- jobprofile style sheet -->
+    <link rel="stylesheet" type="text/css" href="jobprofile/css/style.css">
+    <!-- employer registration style sheet -->
+    <link rel="stylesheet" type="text/css" href="employerregistration/css/style.css">
 </head>
 
 <body ng-app="samarth-coordinator" ng-controller="Maincontroller" ng-cloak>
@@ -26,8 +30,23 @@
     <!-- Samarth-Coordinator Scripts -->
     <script type="text/javascript" src="samarthcoordinator.js"></script>
     <script type="text/javascript" src="candidatesearch/controller/candidatesearchctrl.js"></script>
+    <script type="text/javascript" src="candidatesearch/controller/candidateregistration.js"></script>
     <script type="text/javascript" src="candidatesearch/candidatesearch.js"></script>
     <script type="text/javascript" src="candidatesearch/services/candidatesearchservice.js"></script>
+    <!-- JobProfile js files -->
+    <script type="text/javascript" src="jobprofile/services/jobprofileservices.js"></script>
+    <script type="text/javascript" src="jobprofile/controllers/jobpostcontroller.js"></script>
+    <script type="text/javascript" src="jobprofile/controllers/jobeditcontroller.js"></script>
+    <script type="text/javascript" src="jobprofile/controllers/jobprofilecontroller.js"></script>
+    <script type="text/javascript" src="jobprofile/jobprofile.js"></script>
+    <!-- Job search js files -->
+    <script type="text/javascript" src="jobsearch/services/jobsearchservices.js"></script>
+    <script type="text/javascript" src="jobsearch/controllers/jobsearchcontroller.js"></script>
+    <script type="text/javascript" src="jobsearch/jobsearch.js"></script>
+    <!-- employer register js files -->
+    <script type="text/javascript" src="employerregistration/employerregistration.js"></script>
+    <script type="text/javascript" src="employerregistration/controller/employeeregistrationctrl.js"></script>
+    <script type="text/javascript" src="employerregistration/services/employerservice.js"></script>
     <!-- <script src="script.js"></script> -->
     <script src="home/homeroute.js"></script>
     <script src="home/controllers/navbarController.js"></script>
@@ -42,6 +61,8 @@
     <script type="text/javascript" src="samarth-webcomponents/samarth-webcomponents.js"></script>
     <script type="text/javascript" src="samarth-webcomponents/skillcard/skillcard.js"></script>
     <script type="text/javascript" src="samarth-webcomponents/rubric/rubriccomponent.js"></script>
+    <script type="text/javascript" src="samarth-webcomponents/jobCard/jobCard.js"></script>
+    <script type="text/javascript" src="samarth-webcomponents/jobCard/services/jobCardServices.js"></script>
 </body>
 
 </html>
