--- a/webapp/index.html
+++ b/webapp/index.html
@@ -69,6 +69,8 @@
     <script type="text/javascript" src="samarth-webcomponents/sectionprojectcard/services/sectionprojectservice.js"></script>
     <script type="text/javascript" src="samarth-webcomponents/sectionworkexperiencecard/sectionworkexperiencecard.js"></script>
     <script type="text/javascript" src="samarth-webcomponents/sectionworkexperiencecard/service/sectionworkexperience.js"></script>
+    <script type="text/javascript" src="coordinator/services/circlesGetService.js"></script>
+    <script type="text/javascript" src="samarth-webcomponents/circle/circleCtrl.js"></script>
     <!-- Home module should come almost towards end, as it might be dependent on many other modules -->
     <script src="home/homeroute.js"></script>
     <script src="home/controllers/indexctrl.js"></script>
