added badge in index

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="google-material-icons/dist/material-icons-font.css">
     <link rel="stylesheet" href="home/css/style.css">
     <link rel="stylesheet" href="samarth-webcomponents/rubric/css/style.css">
-
     <!-- jobprofile style sheet -->
     <link rel="stylesheet" type="text/css" href="jobprofile/css/style.css">
     <!-- employer registration style sheet -->
@@ -93,6 +92,8 @@
     <script type="text/javascript" src="samarth-webcomponents/sectionprojectcard/services/sectionprojectservice.js"></script>
     <script type="text/javascript" src="samarth-webcomponents/sectionworkexperiencecard/sectionworkexperiencecard.js"></script>
     <script type="text/javascript" src="samarth-webcomponents/sectionworkexperiencecard/service/sectionworkexperience.js"></script>
+    <script type="text/javascript" src="samarth-webcomponents/verificationbadge/services/verificationbadgeservice.js"></script>
+    <script type="text/javascript" src="samarth-webcomponents/verificationbadge.js"></script>
     <!-- Home module should come almost towards end, as it might be dependent on many other modules -->
     <script src="home/homeroute.js"></script>
     <script src="home/controllers/indexctrl.js"></script>
