--- a/webapp/index.html
+++ b/webapp/index.html
@@ -34,7 +34,6 @@
     <script src="angular-messages/angular-messages.min.js"></script>
     <!-- Samarth-Coordinator Scripts -->
     <script type="text/javascript" src="samarthcoordinator.js"></script>
-    
     <script src="home/controllers/approotctrl.js"></script>
     <!-- Auth module -->
     <script src="auth/authroute.js"></script>
@@ -68,8 +67,12 @@
     <script type="text/javascript" src="candidateregistration/candidateregistration.js"></script>
     <script type="text/javascript" src="candidateregistration/controller/candidateregistrationctrl.js"></script>
     <script type="text/javascript" src="candidateregistration/services/registrationservice.js"></script>
-    <!--complete profile-->
-    <script type="text/javascript" src="completeprofile/services/candidateprofileservice.js"></script>
+    <!-- coordinator Module -->
+    <script type="text/javascript" src="coordinatorregistration/coordinatorroute.js"></script>
+    <script type="text/javascript" src="coordinatorregistration/controller/coordinatorCtrl.js"></script>
+    <!-- complete profile -->
+    <script type="text/javascript" src="completeprofile/services/candidateprofileservice.js">
+    </script>
     <script type="text/javascript" src="completeprofile/controller/completeprofileCtrl.js"></script>
     <script type="text/javascript" src="completeprofile/completeprofile.js"></script>
     <!--Samarth-Webcomponents Scripts-->
