--- a/webapp/index.html
+++ b/webapp/index.html
@@ -32,6 +32,8 @@
     <script type="text/javascript" src="angular-aria/angular-aria.js"></script>
     <script type="text/javascript" src="angular-ui-router/release/angular-ui-router.js"></script>
     <script src="angular-messages/angular-messages.min.js"></script>
+    <script src="moment/min/moment.min.js"></script>
+    <script src="angular-moment/angular-moment.js"></script>
     <!-- Samarth-Coordinator Scripts -->
     <script type="text/javascript" src="samarthcoordinator.js"></script>
     <script src="home/controllers/approotctrl.js"></script>
