--- a/webapp/index.html
+++ b/webapp/index.html
@@ -99,6 +99,7 @@
     <script type="text/javascript" src="samarth-webcomponents/circle/circleCtrl.js"></script>
     <script type="text/javascript" src="samarth-webcomponents/verificationbadge/services/verificationbadgeservice.js"></script>
     <script type="text/javascript" src="samarth-webcomponents/verificationbadge/verificationbadge.js"></script>
+    <script type="text/javascript" src="samarth-webcomponents/skillcard/services/blob.js"></script>
     <!-- Home module should come almost towards end, as it might be dependent on many other modules -->
     <script src="home/homeroute.js"></script>
     <script src="home/controllers/indexctrl.js"></script>
