--- a/webapp/index.html
+++ b/webapp/index.html
@@ -30,16 +30,11 @@
     <script type="text/javascript" src="angular-material/angular-material.js"></script>
     <script type="text/javascript" src="angular-animate/angular-animate.js"></script>
     <script type="text/javascript" src="angular-aria/angular-aria.js"></script>
-    <script type="text/javascript" src="angular-ui-router/release/angular-ui-router.js"></script>
     <script src="angular-messages/angular-messages.min.js"></script>
+    <script src="/html2canvas/build/html2canvas.js"></script>
+    <script src="/angular-ui-router/release/angular-ui-router.js"></script>
     <!-- Samarth-Coordinator Scripts -->
     <script type="text/javascript" src="samarthcoordinator.js"></script>
-<<<<<<< HEAD
-    <script type="text/javascript" src="candidatesearch/controller/candidateSearchCtrl.js"></script>
-    <script type="text/javascript" src="candidateregistration/controller/candidateregistrationctrl.js"></script>
-=======
-    
->>>>>>> 443782334df8fd614716606db86363d6c2403b4f
     <script src="home/controllers/approotctrl.js"></script>
     <!-- Auth module -->
     <script src="auth/authroute.js"></script>
@@ -82,8 +77,9 @@
     <script type="text/javascript" src="samarth-webcomponents/skillcard/skillcard.js"></script>
     <script type="text/javascript" src="samarth-webcomponents/skillcard/services/skillcardservice.js"></script>
     <script type="text/javascript" src="samarth-webcomponents/rubric/rubriccomponent.js"></script>
-    <script type="text/javascript" src="samarth-webcomponents/jobCard/jobCard.js"></script>
-    <script type="text/javascript" src="samarth-webcomponents/jobCard/services/jobCardServices.js"></script>
+    <script type="text/javascript" src="samarth-webcomponents/jobcard/services/blob.js"></script>
+    <script type="text/javascript" src="samarth-webcomponents/jobcard/jobcard.js"></script>
+    <script type="text/javascript" src="samarth-webcomponents/jobcard/services/jobcardservices.js"></script>
     <script type="text/javascript" src="samarth-webcomponents/rubric/services/rubricservice.js"></script>
     <script type="text/javascript" src="samarth-webcomponents/sectionpersonalinfocard/sectionpersonalinfocard.js"></script>
     <script type="text/javascript" src="samarth-webcomponents/sectionpersonalinfocard/services/sectionpersonalinfoservice.js"></script>
