--- a/webapp/index.html
+++ b/webapp/index.html
@@ -34,6 +34,7 @@
     <script src="/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="moment/min/moment.min.js"></script>
     <script src="angular-moment/angular-moment.js"></script>
+    <script type="text/javascript" src="html2canvas/build/html2canvas.js"></script>
     <!-- Samarth-Coordinator Scripts -->
     <script type="text/javascript" src="samarthcoordinator.js"></script>
     <script src="home/controllers/approotctrl.js"></script>
