--- a/webapp/index.html
+++ b/webapp/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="samarth-webcomponents/rubric/css/style.css">
     <!-- jobprofile style sheet -->
     <link rel="stylesheet" type="text/css" href="jobprofile/css/style.css">
+    <link rel="stylesheet" type="text/css" href="completeprofile/css/style.css">
     <!-- employer registration style sheet -->
     <link rel="stylesheet" type="text/css" href="employerregistration/css/style.css">
     <link rel="stylesheet" href="samarth-webcomponents/sectionprojectcard/css/sectionprojectcard.css">
