--- a/webapp/index.html
+++ b/webapp/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="samarth-webcomponents/sectionskillcard/css/sectionskillcard.css">
     <link rel="stylesheet" href="samarth-webcomponents/sectionworkexperiencecard/css/workexpriencecard.css">
     <link rel="stylesheet" href="samarth-webcomponents/sectionpersonalinfocard/css/sectionpersonalinfocard.css">
+    <link rel="stylesheet" type="text/css" href="samarth-webcomponents/jobcard/css/style.css">
 </head>
 
 <body ng-app="samarth-coordinator" ng-controller="approotctrl" ng-cloak>
@@ -34,6 +35,8 @@
     <script src="/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="moment/min/moment.min.js"></script>
     <script src="angular-moment/angular-moment.js"></script>
+    <script type="text/javascript" src="html2canvas/build/html2canvas.js"></script>
+    <script type="text/javascript" src="ng-simplePagination/simplePagination.js"></script>
     <!-- Samarth-Coordinator Scripts -->
     <script type="text/javascript" src="samarthcoordinator.js"></script>
     <script src="home/controllers/approotctrl.js"></script>
